enabling 1 vote per person and small spacing fix

--- a/spotify/assets/css/style.css
+++ b/spotify/assets/css/style.css
@@ -95,4 +95,8 @@ footer {
     padding: 20px;
     }
 
- 
+ #s1Name,
+ #s2Name {
+     margin-top: 1%;
+     margin-bottom: 1%;
+ }
